--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,16 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+server/node_modules
+client/node_modules
+
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# client build
+build
+client/build
