--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,9 @@
     "test": "test"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "client-sessions": "^0.7.0",
+    "express": "^4.14.0"
+  }
 }
