--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "client-sessions": "^0.7.0",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "googleapis": "^16.0.0",
     "node-fetch": "^1.6.3"
